Introduce config props